<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="webersolutions.englishtometricconverter.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:id="@+id/txtTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textColor="@color/material_grey_300"
        android:textStyle="bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txtNumUnits"
        android:layout_below="@+id/txtTitle"
        android:textSize="20sp"
        android:hint="@string/txtNumUnits"
        android:textStyle="italic"
        android:layout_alignParentStart="false"
        android:layout_marginTop="10sp"
        android:layout_toLeftOf="@+id/btnConvert"
        android:layout_toStartOf="@+id/btnConvert"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtConversion"
        android:spinnerMode="dialog"
        android:prompt="@string/prompt"
        android:entries="@array/txtConversion"
        android:layout_below="@+id/txtTitle"
        android:layout_toRightOf="@+id/txtNumUnits"
        android:layout_toEndOf="@+id/txtNumUnits"
        android:layout_marginTop="25sp"
        android:textAlignment="center"
        android:layout_marginLeft="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnConvert"
        android:id="@+id/btnConvert"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:textStyle="italic"
        android:clickable="true"
        android:background="@android:color/darker_gray"
        android:singleLine="true"
        android:nestedScrollingEnabled="false"
        android:textColor="@android:color/holo_red_dark"
        android:padding="10sp"
        android:layout_below="@+id/txtResult" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtResult"
        android:layout_below="@+id/txtConversion"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:text="___"
        android:textStyle="italic"
        android:textColor="@color/material_grey_300"
        android:textAlignment="center" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgMeasure"
        android:layout_below="@+id/btnConvert"
        android:layout_centerHorizontal="true"
        android:src="@drawable/measurement"
        android:contentDescription="@string/description" />

</RelativeLayout>
